--- a/dao/Hibernate/SpringDaoHibernate5Anotaciones/pom.xml
+++ b/dao/Hibernate/SpringDaoHibernate5Anotaciones/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.2.6.RELEASE</version>
+            <version>${spring.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -57,6 +57,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <spring.version>4.2.6.RELEASE</spring.version>
     </properties>
     <name>SpringDaoHibernate5Anotaciones</name>
 </project>
