--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 /dao/JPA/SpringJpaDemo/target/
 /dao/JPA/SpringJpaWeb/target/
 /dao/Hibernate/SpringDaoHibernate5Anotaciones/target/
+/dao/EjemploJinq/target/
